--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "apt"]
 	path = apt
 	url = https://github.com/chef-cookbooks/apt.git
+[submodule "packagecloud"]
+	path = packagecloud
+	url = https://github.com/computology/packagecloud-cookbook
