--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "packagecloud"]
 	path = packagecloud
 	url = https://github.com/computology/packagecloud-cookbook
+[submodule "yum-epel"]
+	path = yum-epel
+	url = https://github.com/chef-cookbooks/yum-epel.git
