--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "runit"]
         path = runit
         url = https://github.com/chef-cookbooks/runit.git
+[submodule "container_baseimage"]
+	path = container_baseimage
+	url = https://github.com/mjonuschat/chef_container_baseimage.git
